--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-three/postprocessing": "^3.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
+    "next-mdx-remote": "^6.0.0",
     "postprocessing": "^6.38.3",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
